--- a/FurnitureConfigurator/cs/OrderControl.xaml
+++ b/FurnitureConfigurator/cs/OrderControl.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:XCad.Examples.FurnitureConfigurator"
+             xmlns:enum="clr-namespace:XCad.Examples.FurnitureConfigurator.Enums"
              mc:Ignorable="d" Background="#f7f7f7"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -24,19 +25,19 @@
                                 <Image.Style>
                                     <Style TargetType="Image">
                                         <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Path=Status}" Value="{x:Static local:OrderItemStatus_e.Available}">
+                                            <DataTrigger Binding="{Binding Path=Status}" Value="{x:Static enum:OrderItemStatus_e.Available}">
                                                 <DataTrigger.Setters>
                                                     <Setter Property="Source" Value="Resources/status-available.png"/>
                                                     <Setter Property="ToolTip" Value="Available"/>
                                                 </DataTrigger.Setters>
                                             </DataTrigger>
-                                            <DataTrigger Binding="{Binding Path=Status}" Value="{x:Static local:OrderItemStatus_e.OutOfStock}">
+                                            <DataTrigger Binding="{Binding Path=Status}" Value="{x:Static enum:OrderItemStatus_e.OutOfStock}">
                                                 <DataTrigger.Setters>
                                                     <Setter Property="Source" Value="Resources/status-out-of-stock.png"/>
                                                     <Setter Property="ToolTip" Value="Out-of-stock"/>
                                                 </DataTrigger.Setters>
                                             </DataTrigger>
-                                            <DataTrigger Binding="{Binding Path=Status}" Value="{x:Static local:OrderItemStatus_e.Custom}">
+                                            <DataTrigger Binding="{Binding Path=Status}" Value="{x:Static enum:OrderItemStatus_e.Custom}">
                                                 <DataTrigger.Setters>
                                                     <Setter Property="Source" Value="Resources/status-custom.png"/>
                                                     <Setter Property="ToolTip" Value="Custom Size"/>
@@ -52,7 +53,7 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Button Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5">
+        <Button Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Command="{Binding Path=OrderCommand}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
