--- a/StandAloneModelBuilder/StandAloneModelBuilder/MainWindow.xaml
+++ b/StandAloneModelBuilder/StandAloneModelBuilder/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Xarial.XCad.Examples.Sw.StandAloneModelBuilder"
         xmlns:xctrls="clr-namespace:Xarial.XToolkit.Wpf.Controls;assembly=Xarial.XToolkit.Wpf"
-        mc:Ignorable="d"
+        mc:Ignorable="d" Icon="Resources/drawer-icon.png"
         Title="SOLIDWORKS Model Builder" Height="450" Width="800">
     <Grid Grid.IsSharedSizeScope="True">
         <Grid.ColumnDefinitions>
@@ -14,6 +14,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <GroupBox Header="Parameters" Margin="5">
@@ -39,11 +40,26 @@
                 </WindowsFormsHost.Child>
             </WindowsFormsHost>
         </GroupBox>
-        <Button Grid.Row="1" Margin="5" Width="100" HorizontalAlignment="Right" Command="{Binding Path=GenerateCommand}">
-            <TextBlock Text="Generate" Margin="5"/>
-        </Button>
-        <Button Grid.Row="1" Grid.Column="1" Margin="5" Width="100" HorizontalAlignment="Left" Command="{Binding Path=SaveCommand}">
-            <TextBlock Text="Save" Margin="5"/>
-        </Button>
+        <Grid Grid.ColumnSpan="2" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Image Grid.Column="0" Height="50" HorizontalAlignment="Left" Margin="5" Source="Resources/xarial-logo.png" RenderOptions.BitmapScalingMode="Fant"/>
+            <Button Grid.Column="1" Margin="5" Width="100" HorizontalAlignment="Right" Command="{Binding Path=GenerateCommand}" VerticalAlignment="Center">
+                <TextBlock Text="Generate" Margin="5"/>
+            </Button>
+            <Button Grid.Column="2" Margin="5" Width="100" HorizontalAlignment="Left" Command="{Binding Path=SaveCommand}" VerticalAlignment="Center">
+                <TextBlock Text="Save" Margin="5"/>
+            </Button>
+            <TextBlock Grid.Column="3" Margin="3" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                <Hyperlink Command="{Binding Path=OpenUrlCommand}">
+                    <TextBlock Text="www.xarial.com"/>
+                </Hyperlink>
+            </TextBlock>
+        </Grid>
+        
     </Grid>
 </Window>
